--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Boostrap landing page",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile:sass": "node-sass sass/style.scss css/style.css -w"
   },
   "repository": {
     "type": "git",
